# ESP32-S3-ePaper-1.54

./: .gitignore  README.md
firmware/apps/ai_voice_assistant/components/app/: CMakeLists.txt  assistant_client.cpp  assistant_client.h  assistant_config.h  assistant_model.cpp  assistant_model.h  assistant_types.h  assistant_ui.cpp  assistant_ui.h  audio_loop_policy.cpp  memo_recorder.cpp  memo_storage.cpp  memo_types.h  power_sleep_policy.h  user_app.cpp  user_app.h
firmware/apps/ai_voice_assistant/components/app/test/: test_assistant_model.cpp
firmware/apps/desktop_helper/components/app/: CMakeLists.txt  desktop_cache.cpp  desktop_cache.h  desktop_config.h  desktop_model.cpp  desktop_model.h  desktop_sleep.cpp  desktop_sleep.h  desktop_ui.cpp  desktop_ui.h  user_app.cpp  user_app.h  weather_client.cpp  weather_client.h
firmware/apps/desktop_helper/components/app/test/: test_desktop_model.cpp
firmware/apps/desktop_helper/components/externlib/ui_res/: CMakeLists.txt  _3_RGB565A8_200x200.c  lv_font_montserratMedium_17.c
firmware/apps/factory_program_custom/components/app/: CMakeLists.txt  audio_loop_policy.h  memo_favorites.cpp  memo_favorites.h  memo_player.cpp  memo_player.h  memo_recorder.cpp  memo_recorder.h  memo_storage.cpp  memo_storage.h  memo_types.h  memo_utils.cpp  memo_utils.h  power_sleep_policy.cpp  touch_gesture.cpp  touch_gesture.h  ui_sfx.cpp  ui_sfx.h  user_app.cpp  user_app.h  voice_settings.cpp  voice_settings.h  voice_ui.cpp  voice_ui.h
firmware/apps/factory_program_custom/components/app/test/: test_memo_utils.cpp
firmware/bsp/esp32-s3-epaper-1.54-v2/: CMakeLists.txt  README.md  idf_component.yml
firmware/bsp/esp32-s3-epaper-1.54-v2/SensorLib/: .gitattributes  CMakeLists.txt  keywords.txt  platformio.ini
firmware/bsp/esp32-s3-epaper-1.54-v2/SensorLib/src/: AW9364LedDriver.hpp  BoschFirmware.h  DevicesPins.h  GaugeBQ27220.hpp  SensorBHI260AP_Klio.cpp  SensorBMA423.cpp  SensorBMM150.hpp  SensorCM32181.hpp  SensorDRV2605.hpp  SensorLTR553.hpp  SensorLib.h  SensorPCF85063.hpp  SensorPCF8563.hpp  SensorQMC6310.hpp  SensorQMI8658.hpp  SensorWireHelper.h  TouchDrvCHSC5816.hpp  TouchDrvCSTXXX.cpp  TouchDrvFT6X36.hpp  TouchDrvGT9895.cpp  TouchDrvGT9895.hpp
firmware/bsp/esp32-s3-epaper-1.54-v2/SensorLib/src/REG/: BMA423Constants.h  CHSC5816Constants.h  CM32181Constants.h  CST9xxConstants.h  CSTxxxConstants.h  DRV2605Constants.h  GT911Constants.h  GT9895Constants.h  LTR533Constants.h  MPU6886Constants.h  QMC6310Constants.h
firmware/bsp/esp32-s3-epaper-1.54-v2/SensorLib/src/bosch/: BoschParseStatic.hpp  BoschPhySensorInfo.hpp  BoschSensorControl.hpp  BoschSensorDataHelper.hpp  bhy2_hif.c
firmware/bsp/esp32-s3-epaper-1.54-v2/SensorLib/src/bosch/firmware/: bosch_app30_shuttle_bhi260.h  bosch_app30_shuttle_bhi260_aux_bmm150.h  bosch_app30_shuttle_bhi260_aux_bmm150_flash.h  bosch_app30_shuttle_bhi260_bme68x.h  bosch_app30_shuttle_bhi260_bme68x_flash.h  bosch_app30_shuttle_bhi260_bmp390.h  (+17 more)
firmware/bsp/esp32-s3-epaper-1.54-v2/SensorLib/src/platform/: SensorCommBase.hpp  SensorCommDebug.cpp  SensorCommDebug.hpp  SensorCommEnhanced.hpp  SensorCommStatic.hpp  SensorDataTypeClass.hpp
firmware/bsp/esp32-s3-epaper-1.54-v2/SensorLib/src/touch/: TouchDrvCST226.cpp  TouchDrvCST226.h  TouchDrvCST816.cpp  TouchDrvCST816.h  TouchDrvCST92xx.cpp  TouchDrvCST92xx.h
firmware/bsp/esp32-s3-epaper-1.54-v2/codec_board/: codec_board.c  codec_init.c
firmware/bsp/esp32-s3-epaper-1.54-v2/include/: board.h  board_audio.h  board_buttons.h  board_config.h  board_epaper.h  board_i2c.h  board_pins.h  board_power.h  board_sdcard.h  board_sensors.h  board_touch.h
firmware/bsp/esp32-s3-epaper-1.54-v2/src/: board.cpp  board_audio.c  board_buttons.c  board_epaper.cpp  board_i2c.c  board_power.cpp  board_sdcard.c  board_sensors.cpp  board_touch.cpp  multi_button.c
(+92 files in other folders)
