idf_component_register(
  SRCS
  "user_app.cpp"
  "memo_utils.cpp"
  "memo_storage.cpp"
  "memo_favorites.cpp"
  "memo_recorder.cpp"
  "memo_player.cpp"
  "audio_loop_policy.cpp"
  "power_sleep_policy.cpp"
  "ui_sfx.cpp"
  "voice_settings.cpp"
  "voice_ui.cpp"
  "touch_gesture.cpp"
  PRIV_REQUIRES
  port_bsp
  ui
  driver
  esp_hw_support
  esp_timer
  my_button
  codec_board
  nvs_flash
  waveshare__pcf85063a
  REQUIRES
  INCLUDE_DIRS ".")
